--- a/foundations/flex/05-flex-modal/index.html
+++ b/foundations/flex/05-flex-modal/index.html
@@ -9,12 +9,20 @@
   </head>
   <body>
     <div class="modal">
+      <div>
       <div class="icon">!</div>
+      </div>
+      <div class="container">
+      <div class="title-container">
       <div class="header">Are you sure you want to do that?</div>
-      <button class="close-button">✖</button>
+      <button class="close-button">x</button>
+      </div>
       <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
+      <div class="action-container">
       <button class="continue">Continue</button>
       <button class="cancel">Cancel</button>
+      </div>
+      </div>
     </div>
   </body>
 </html>
